...
    private func performInstall(_ unishare: UnishareVO) async {
        guard let unishareId = unishare.id else { return }
        let workspaceManager = WorkspaceManager.shared
        let title = unishare.title ?? code
        infoText = ""

        let downloadURL = "https://api.unipad.io/unishare/\(unishareId)/download"
        let workspace = workspaceManager.downloadWorkspace.url

        titleText = String(localized: "downloading")
        messageText = "0%"
        log("Downloading from: \(downloadURL)")

...
